--- a/DXHook/DXHook.csproj
+++ b/DXHook/DXHook.csproj
@@ -1,47 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{23178A3D-2AC0-419A-B1B6-59CA45191270}</ProjectGuid>
+    <ProjectGuid>{E3A9A9A2-B582-46C3-95AC-353442C9058D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Capture</RootNamespace>
-    <AssemblyName>Capture</AssemblyName>
+    <RootNamespace>DXHook</RootNamespace>
+    <AssemblyName>DXHook</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-    <TargetFrameworkProfile />
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\bin\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\bin\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EasyHook, Version=2.7.7097.0, Culture=neutral, PublicKeyToken=4b580fca19d0b0c5, processorArchitecture=MSIL">
@@ -86,79 +74,60 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CaptureProcess.cs" />
+    <Compile Include="EntryPoint.cs" />
     <Compile Include="Exceptions.cs" />
+    <Compile Include="Hook\BaseDXHook.cs" />
     <Compile Include="Hook\Common\Element.cs" />
     <Compile Include="Hook\Common\FramesPerSecond.cs" />
     <Compile Include="Hook\Common\ImageElement.cs" />
-    <Compile Include="Hook\Common\IOverlay.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Hook\Common\IOverlayElement.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="Hook\Common\IOverlay.cs" />
+    <Compile Include="Hook\Common\IOverlayElement.cs" />
     <Compile Include="Hook\Common\Overlay.cs" />
     <Compile Include="Hook\Common\TextElement.cs" />
+    <Compile Include="Hook\D3D9.cs" />
     <Compile Include="Hook\DX11\ContextState.cs" />
     <Compile Include="Hook\DX11\DeviceManager.cs" />
+    <Compile Include="Hook\DX11\DXFont.cs" />
     <Compile Include="Hook\DX11\DXImage.cs" />
     <Compile Include="Hook\DX11\DXOverlayEngine.cs" />
-    <Compile Include="Hook\DX11\DXFont.cs" />
     <Compile Include="Hook\DX11\DXSprite.cs" />
     <Compile Include="Hook\DX11\RendererBase.cs" />
-    <Compile Include="Hook\DX9\DXOverlayEngine.cs" />
-    <Compile Include="Hook\SafeHGlobal.cs" />
     <Compile Include="Hook\DX11\ScreenAlignedQuadRenderer.cs" />
     <Compile Include="Hook\DX9FormatExtension.cs" />
-    <Compile Include="Hook\FramesPerSecond.cs" />
-    <Compile Include="Hook\Hook.cs" />
-    <Compile Include="Hook\HookManager.cs" />
-    <Compile Include="Hook\TextDisplay.cs" />
-    <Compile Include="Interface\DrawOverlayEventArgs.cs" />
-    <Compile Include="Interface\ScreenshotExtensions.cs" />
-    <Compile Include="Interface\CaptureConfig.cs" />
-    <Compile Include="EntryPoint.cs" />
-    <Compile Include="Hook\BaseDXHook.cs" />
-    <Compile Include="Hook\D3D9.cs" />
+    <Compile Include="Hook\DX9\DXOverlayEngine.cs" />
     <Compile Include="Hook\DXGI.cs" />
     <Compile Include="Hook\DXHookD3D10.cs" />
     <Compile Include="Hook\DXHookD3D10_1.cs" />
     <Compile Include="Hook\DXHookD3D11.cs" />
     <Compile Include="Hook\DXHookD3D9.cs" />
+    <Compile Include="Hook\FramesPerSecond.cs" />
+    <Compile Include="Hook\Hook.cs" />
+    <Compile Include="Hook\HookManager.cs" />
     <Compile Include="Hook\IDXHook.cs" />
+    <Compile Include="Hook\SafeHGlobal.cs" />
+    <Compile Include="Hook\TextDisplay.cs" />
+    <Compile Include="Interface\CaptureConfig.cs" />
     <Compile Include="Interface\CaptureInterface.cs" />
     <Compile Include="Interface\Direct3DVersion.cs" />
     <Compile Include="Interface\DisplayTextEventArgs.cs" />
+    <Compile Include="Interface\DrawOverlayEventArgs.cs" />
     <Compile Include="Interface\ImageFormat.cs" />
     <Compile Include="Interface\MessageReceivedEventArgs.cs" />
     <Compile Include="Interface\MessageType.cs" />
     <Compile Include="Interface\Screenshot.cs" />
+    <Compile Include="Interface\ScreenshotExtensions.cs" />
     <Compile Include="Interface\ScreenshotReceivedEventArgs.cs" />
     <Compile Include="Interface\ScreenshotRequest.cs" />
     <Compile Include="NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="SharpDX\Component.cs" />
     <Compile Include="SharpDX\ComponentBase.cs" />
     <Compile Include="SharpDX\IComponent.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="key.snk" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="EasyHook32.dll">
@@ -180,18 +149,14 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="sharpdx_direct3d11_1_effects_x64.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="sharpdx_direct3d11_1_effects_x86.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
